--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -58,9 +58,18 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="sample.html" />
+    <Content Include="sass\github-button.css">
+      <DependentUpon>github-button.scss</DependentUpon>
+    </Content>
     <Content Include="sass\partials\colors.css">
       <DependentUpon>_colors.scss</DependentUpon>
     </Content>
+    <Content Include="sass\partials\_typeography.css">
+      <DependentUpon>_typeography.scss</DependentUpon>
+    </Content>
+    <Content Include="Scripts\github-buttons.js" />
+    <Content Include="Scripts\jquery-1.8.1.js" />
+    <Content Include="Scripts\jquery-ui-1.8.20.js" />
     <Content Include="Scripts\simple-combo-box.js" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -78,6 +87,18 @@
     </Content>
     <Content Include="sass\partials\_colors.scss">
       <Compile>False</Compile>
+      <Minify>True</Minify>
+      <CompileStyle>Nested</CompileStyle>
+      <DebugInfo>False</DebugInfo>
+    </Content>
+    <Content Include="sass\partials\_typeography.scss">
+      <Compile>True</Compile>
+      <Minify>True</Minify>
+      <CompileStyle>Nested</CompileStyle>
+      <DebugInfo>False</DebugInfo>
+    </Content>
+    <Content Include="sass\github-button.scss">
+      <Compile>True</Compile>
       <Minify>True</Minify>
       <CompileStyle>Nested</CompileStyle>
       <DebugInfo>False</DebugInfo>
